--- a/static/css/default.css
+++ b/static/css/default.css
@@ -35,3 +35,18 @@ a:hover { text-decoration: none;}
 #content .movie .image-holder { padding-right: 15px;  margin-bottom: 5px; width: 165px;}
 #content .movie .image-holder .image { width:165px; height: auto; }
 #content .movie ul.moreinfo { display: none; }
+
+.glyphicon.spinning {
+    animation: spin 1s infinite linear;
+    -webkit-animation: spin2 1s infinite linear;
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg); }
+    to { transform: scale(1) rotate(360deg); }
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
